correctly hidden corresponding user related links on small and wide screens

--- a/app/_components/header.module.css
+++ b/app/_components/header.module.css
@@ -135,7 +135,7 @@
 }
 
 .wideScreenUserLinks {
-    display: flex;
+    display: none;
     gap: 0.5rem;
 }
 
@@ -285,6 +285,10 @@
 
     .smallScreenUserLinks {
         display: none;
+    }
+
+    .wideScreenUserLinks {
+        display: flex;
     }
 }
 
